--- a/src/Components/menubutton/Navbar.css
+++ b/src/Components/menubutton/Navbar.css
@@ -1,77 +1,88 @@
 .navbar {
-    background-color: red;
+  background-color: red;
+  height: 80px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+
+}
+
+.menu-bars {
+  /* margin-left: 2rem;
+  font-size: 2rem;
+  background: none; */
+ 
+  margin-left: 2rem;
+     font-size: 2rem;
     height: 80px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-  }
+     display: flex;
+     justify-content: flex-start;
+     align-items: center;
+     background-Color:red;
+}
+
+.nav-menu {
+  background-color: white;
+  box-shadow: 1px 2px 9px #F4AAB9;
+  box-shadow: 5px 10px;
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 350ms;
+}
+
+.nav-menu.active {
+  left: 0;
+  transition: 350ms;
+}
+
+.nav-text {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 8px 0px 8px 16px;
+  list-style: none;
+  height: 60px;
+}
+
+.nav-text a {
+  text-decoration: none;
+  color: black;
+  font-size: 28px;
+  font-weight: bold;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
+  /* margin-left: 10px; */
   
-  .menu-bars {
-    margin-left: 2rem;
-    font-size: 2rem;
-    background: none;
-  }
-  
-  .nav-menu {
-    background-color: green;
-    width: 250px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    transition: 850ms;
-  }
-  
-  .nav-menu.active {
-    left: 0;
-    transition: 350ms;
-  }
-  
-  .nav-text {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 8px 0px 8px 16px;
-    list-style: none;
-    height: 60px;
-  }
-  
-  .nav-text a {
-    text-decoration: none;
-    color: black;
-    font-size: 28px;
-    font-weight: bold;
-    width: 95%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    border-radius: 4px;
-    /* margin-left: 10px; */
-    
-  }
-  
-  .nav-text a:hover {
-    background-color: #1a83ff;
-  }
-  
-  .nav-menu-items {
-    width: 100%;
-  }
-  
-  .navbar-toggle {
-    background-color: red;
-    width: 119%;
-    height: 80px;
-    margin-top: -16px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    margin-left: -40px;
-  }
-  
-  span {
-    margin-left: 16px;
-  }
+}
+
+.nav-text a:hover {
+  background-color: gray;
+}
+
+.nav-menu-items {
+  width: 100%;
+}
+
+.navbar-toggle {
+  background-color: red;
+  width: 119%;
+  height: 80px;
+  margin-top: -16px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-left: -40px;
+}
+
+span {
+  margin-left: 16px;
+}
