--- a/src/Components/topheading/Heading.css
+++ b/src/Components/topheading/Heading.css
@@ -2,6 +2,6 @@
     background-color: red;
     text-align: center;
     margin-top: -20px;
-    position: relative;
+    position: absolute;
     margin-left: -89px;
   }
