--- a/src/pages/loginPage/LoginPage.css
+++ b/src/pages/loginPage/LoginPage.css
@@ -30,7 +30,7 @@ html, body, #reactapp, .App {
           border-width: 1px;
           border-color: white;
           /* box-shadow: 2px 2px 5px 5px; */
-          box-shadow: 10px 10px grey;
+          box-shadow: 10px 10px 10px 10px grey;
           
           /* position: absolute; */
           padding-top: -280px;
@@ -84,13 +84,13 @@ html, body, #reactapp, .App {
           height: 40px;
           background-color: red;
           justify-content: center;
-          font-size: 30px;
+          font-size: 20px;
           position: absolute;
           color: white;
           border-radius: 15px;
           text-align: center;
            margin-left: 280px;
-           margin-top: -60px;
+           margin-top: -58px;
           
          }
          .imgsrc {
